Mostly Kotlin based build, working on (at least) macOS with updated JVM, SWT and Gradle
Signed-off-by: Christoph Obexer <cobexer@gmail.com>